RESOLVED FIXED265868
[Debug] ASSERTION FAILED: m_phase == ViewTransitionPhase::Done || m_phase == ViewTransitionPhase::PendingCapture
https://bugs.webkit.org/show_bug.cgi?id=265868
Summary [Debug] ASSERTION FAILED: m_phase == ViewTransitionPhase::Done || m_phase == ...
Vitaly Dyackhov
Reported 2023-12-05 05:45:35 PST
ASSERTION FAILED: m_phase == ViewTransitionPhase::Done || m_phase == ViewTransitionPhase::PendingCapture /Volumes/Data/worker/Apple-Ventura-Debug-Build/build/Source/WebCore/dom/ViewTransition.cpp(139) : void WebCore::ViewTransition::callUpdateCallback() 1 0x1a3258119 WTFCrash 2 0x2312eb8bb WTFCrashWithInfo(int, char const*, char const*, int) 3 0x234ff6db0 WebCore::ViewTransition::callUpdateCallback() 4 0x23500a6d2 WebCore::ViewTransition::setupViewTransition()::$_15::operator()() const 5 0x23500a5c9 WTF::Detail::CallableWrapper<WebCore::ViewTransition::setupViewTransition()::$_15, void>::call() 6 0x23130be52 WTF::Function<void ()>::operator()() const 7 0x234e792c9 WebCore::EventLoopFunctionDispatchTask::execute() 8 0x234e6f166 WebCore::EventLoop::run(std::__1::optional<WTF::ApproximateTime>) 9 0x2350108c6 WebCore::WindowEventLoop::didReachTimeToRun() 10 0x2350136c9 decltype(*std::declval<WebCore::WindowEventLoop*&>().*std::declval<void (WebCore::WindowEventLoop::*&)()>()()) std::__1::__invoke[abi:v15006]<void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&, void>(void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*&) 11 0x23501364d std::__1::__bind_return<void (WebCore::WindowEventLoop::*)(), std::__1::tuple<WebCore::WindowEventLoop*>, std::__1::tuple<>, __is_valid_bind_return<void (WebCore::WindowEventLoop::*)(), std::__1::tuple<WebCore::WindowEventLoop*>, std::__1::tuple<>>::value>::type std::__1::__apply_functor[abi:v15006]<void (WebCore::WindowEventLoop::*)(), std::__1::tuple<WebCore::WindowEventLoop*>, 0ul, std::__1::tuple<>>(void (WebCore::WindowEventLoop::*&)(), std::__1::tuple<WebCore::WindowEventLoop*>&, std::__1::__tuple_indices<0ul>, std::__1::tuple<>&&) 12 0x235013600 std::__1::__bind_return<void (WebCore::WindowEventLoop::*)(), std::__1::tuple<WebCore::WindowEventLoop*>, std::__1::tuple<>, __is_valid_bind_return<void (WebCore::WindowEventLoop::*)(), std::__1::tuple<WebCore::WindowEventLoop*>, std::__1::tuple<>>::value>::type std::__1::__bind<void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*>::operator()[abi:v15006]<>() 13 0x2350135b9 WTF::Detail::CallableWrapper<std::__1::__bind<void (WebCore::WindowEventLoop::*&)(), WebCore::WindowEventLoop*>, void>::call() 14 0x23130be52 WTF::Function<void ()>::operator()() const 15 0x23142f569 WebCore::Timer::fired() 16 0x235ee5430 WebCore::ThreadTimers::sharedTimerFiredInternal() 17 0x235eed2e1 WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0::operator()() const 18 0x235eed299 WTF::Detail::CallableWrapper<WebCore::ThreadTimers::setSharedTimer(WebCore::SharedTimer*)::$_0, void>::call() 19 0x23130be52 WTF::Function<void ()>::operator()() const 20 0x235e99e41 WebCore::MainThreadSharedTimer::fired() 21 0x235f72966 WebCore::timerFired(__CFRunLoopTimer*, void*) 22 0x7ff815243358 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ 23 0x7ff815242ed3 __CFRunLoopDoTimer 24 0x7ff815242af9 __CFRunLoopDoTimers 25 0x7ff815228e39 __CFRunLoopRun 26 0x7ff815227f31 CFRunLoopRunSpecific 27 0x7ff8160b42a3 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 28 0x7ff816136c98 -[NSRunLoop(NSRunLoop) run] 29 0x7ff814ea07f3 _xpc_objc_main 30 0x7ff814ea01f7 xpc_main 31 0x1d3f9c53d WebKit::XPCServiceMain(int, char const**) com.apple.WebKit.WebContent.Development terminated (pid 14804) for reason: crash
Attachments
Vitaly Dyackhov
Comment 1 2023-12-05 06:51:25 PST
Vitaly Dyackhov
Comment 2 2023-12-06 03:59:52 PST
EWS
Comment 3 2023-12-06 04:13:15 PST
Test gardening commit 271601@main (04d7dd54948a): <https://commits.webkit.org/271601@main> Reviewed commits have been landed. Closing PR #21386 and removing active labels.
Tim Nguyen (:ntim)
Comment 4 2023-12-10 15:13:46 PST
*** Bug 265834 has been marked as a duplicate of this bug. ***
Tim Nguyen (:ntim)
Comment 5 2023-12-10 15:14:19 PST
EWS
Comment 6 2023-12-12 17:22:00 PST
Committed 271959@main (ecf63ceef8cf): <https://commits.webkit.org/271959@main> Reviewed commits have been landed. Closing PR #21333 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.